--- a/vn/digital-metal.html
+++ b/vn/digital-metal.html
@@ -27,9 +27,9 @@
 
 <body id="page-top" class="subpages">
 <div style="position:fixed;top: 25%;right: 0;border: 1px solid black;background-color: rgba(0,0,0,0.8);padding: 10px 10px 10px 15px;border-top-left-radius: 20%;border-bottom-left-radius: 20%;color: white;">
-      <a href="../index.html" style="color: white;">English</a>
+      <a href="../digital-metal.html" style="color: white;">English</a>
 		<hr style="color: white;">
-      <a href="vn/index.html" style="color: white;">Tiếng Việt</a>
+      <a href="../vn/digital-metal.html" style="color: white;">Tiếng Việt</a>
     </div>
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-shrink" id="mainNav">
@@ -42,13 +42,13 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#page-top">TRANG CHỦ</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#page-top">TRANG CHỦ</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#company">HỒ SƠ CÔNG TY</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#company">HỒ SƠ CÔNG TY</a>
           </li>
 		  <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#product">SẢN PHẨM</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#product">SẢN PHẨM</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link js-scroll-trigger" href="index.html#application">ỨNG DỤNG<span class="dropdown-toggle" data-toggle="dropdown"></a>
