--- a/brand-enhancement.html
+++ b/brand-enhancement.html
@@ -26,7 +26,11 @@
 </head>
 
 <body id="page-top" class="subpages">
-
+<div style="position:fixed;top: 25%;right: 0;border: 1px solid black;background-color: rgba(0,0,0,0.8);padding: 10px 10px 10px 15px;border-top-left-radius: 20%;border-bottom-left-radius: 20%;color: white;">
+      <a href="brand-enhancement.html" style="color: white;">English</a>
+		<hr style="color: white;">
+      <a href="vn/brand-enhancement.html" style="color: white;">Tiếng Việt</a>
+    </div>
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-shrink" id="mainNav">
     <div class="container">
