--- a/vn/index.html
+++ b/vn/index.html
@@ -29,7 +29,7 @@
 	<div style="position:fixed;top: 25%;right: 0;border: 1px solid black;background-color: rgba(0,0,0,0.8);padding: 10px 10px 10px 15px;border-top-left-radius: 20%;border-bottom-left-radius: 20%;color: white;">
       <a href="../index.html" style="color: white;">English</a>
 		<hr style="color: white;">
-      <a href="vn/index.html" style="color: white;">Tiếng Việt</a>
+      <a href="../vn/index.html" style="color: white;">Tiếng Việt</a>
     </div>
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
