--- a/vn/hot-stamping-dies.html
+++ b/vn/hot-stamping-dies.html
@@ -132,7 +132,7 @@
             <img class="img-fluid" src="../img/hsd/hs01.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Blind Embossing</h4>
+            <h4>Khuôn Ép Nổi</h4>
          <p class="text-muted"></p>
           </div>
         </div>
@@ -140,7 +140,7 @@
             <img class="img-fluid" src="../img/hsd/hs02.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Hot Stamping Dies</h4>
+            <h4>Khuôn Ép Nhiệt</h4>
             <!--<p class="text-muted">Graphic Design</p>-->
           </div>
         </div>
@@ -148,7 +148,7 @@
             <img class="img-fluid" src="../img/hsd/hs03.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Rotary Stamping Dies</h4>
+            <h4>Khuôn Ép Lăn</h4>
            <!-- <p class="text-muted">Identity</p>-->
           </div>
         </div>
@@ -156,7 +156,7 @@
             <img class="img-fluid" src="../img/hsd/hs04.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Metal Dies</h4>
+            <h4>Khuôn Kim Loại</h4>
            <!-- <p class="text-muted">Branding</p>-->
           </div>
         </div>
@@ -164,7 +164,7 @@
             <img class="img-fluid" src="../img/hsd/ht01.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Silicone Dies</h4>
+            <h4>Khuôn Silicone</h4>
            <!-- <p class="text-muted">Website Design</p>-->
           </div>
         </div>
@@ -172,7 +172,7 @@
             <img class="img-fluid" src="../img/hsd/hs06.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Braille Dies</h4>
+            <h4>Khuôn Chữ Nổi Bray</h4>
            <!-- <p class="text-muted">Website Design</p>-->
           </div>
         </div>
